Small fixes to ShortestPath